objects/CSScoring__c.object
<CustomObject>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>CS Scoring</label>
    <listViews>
        <fullName>CS_Scoring</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Question_Type__c</columns>
        <columns>Response__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>CS Scoring</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>